--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url" : "https://github.com/xjhonn/inside_geofence.git"
   },  
   "author": {
-    "author": "Jonatan dos Santos",
+    "name": "Jonatan dos Santos",
     "email": "xjhonn@gmail.com",    
   },
   "license": "MIT",
