--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },  
   "author": {
     "name": "Jonatan dos Santos",
-    "email": "xjhonn@gmail.com",    
+    "email": "xjhonn@gmail.com"    
   },
   "license": "MIT",
   "dependencies": {}
